@@ -61,6 +61,7 @@
 
 [seaking_server_1.0.0.1 2013-10-11 张春生]
 1、新功能：增加删除角色功能
+2、新功能：存储session到redis中
 
 --备注分类
 1、新功能：
